...
    if (lang == 'en') {
      // ignore: use_build_context_synchronously
      context.setLocale(Locale('en', 'US'));
      LocaleNotifier.instance.value = const Locale('en', 'US');
    } else if (lang == 'pl') {
      // ignore: use_build_context_synchronously
      context.setLocale(Locale('pl', 'PL'));
      LocaleNotifier.instance.value = const Locale('pl', 'PL');
    }
    setState(() => _lang = lang);
  }

  Future<void> _confirmReset() async {
...
                              Padding(
                                padding: EdgeInsets.symmetric(horizontal: 12),
                                child: Text('PL'),
                              ),
                              Padding(
                                padding: EdgeInsets.symmetric(horizontal: 12),
                                child: Text('EN'),
                              ),
                            ],
                          ),
                        ),
                      ),
                    ),
...
